src/app/globals.css
@import "tailwindcss";

/* Use native macOS scrollbar behavior */
html {
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
}

:root {
  --foreground: #000000;
  --background: #ffffff;
  --border: #d5d5d5;
  --secondary: #777777;

  /* took this from design agency */    
  --color-primary-50: oklch(97.7% 0.013 236.62);
  --color-primary-100: oklch(95.1% 0.026 236.824);
  --color-primary-200: oklch(90.1% 0.058 230.902);
  --color-primary-300: oklch(82.6% 0.111 230.318);
  --color-primary-400: oklch(74.6% 0.16 232.661);
  --color-primary-500: oklch(68.5% 0.169 237.325);
  --color-primary-600: oklch(61.6% 0.181 241.659);
  --color-primary-700: oklch(39.1% 0.09 240.876);
  --color-primary-800: oklch(29.3% 0.066 243.157);
  --color-primary-900: oklch(25.6% 0.045 203.388);
  --color-primary-950: oklch(21.7% 0.08 205.041);
}

@theme {
  --breakpoint-2xs: 320px;
  --breakpoint-xs: 390px;
  --breakpoint-s: 480px;
  --breakpoint-sm: 640px;
  --breakpoint-md: 768px;
  --breakpoint-lg: 1024px;
  --breakpoint-xl: 1152px;
  --breakpoint-2xl: 1280px;
  --breakpoint-3xl: 1400px;
  --breakpoint-4xl: 1536px;
  --breakpoint-5xl: 1728px;
  --breakpoint-6xl: 1920px;
  --breakpoint-7xl: 2560px;
  --breakpoint-8xl: 3840px;
}

@theme inline {
  --color-foreground: var(--foreground);
  --color-background: var(--background);
  --color-border: var(--border);
  --color-secondary: var(--secondary);

  --color-primary-50: var(--color-primary-50);
  --color-primary-100: var(--color-primary-100);
  --color-primary-200: var(--color-primary-200);
  --color-primary-300: var(--color-primary-300);
  --color-primary-400: var(--color-primary-400);
  --color-primary-500: var(--color-primary-500);
  --color-primary-600: var(--color-primary-600);
  --color-primary-700: var(--color-primary-700);
  --color-primary-800: var(--color-primary-800);
  --color-primary-900: var(--color-primary-900);
  --color-primary-950: var(--color-primary-950);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --animate-marquee: marquee var(--duration) infinite linear;
  --animate-marquee-vertical: marquee-vertical var(--duration) linear infinite;
}

::selection {
  background-color: var(--color-primary-500);
  color: var(--color-background);
}

body {
  /* foreground: var(--foreground); */
  color: var(--background);
}

body::after {
  content: "";
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: linear-gradient(rgba(255, 255, 255, 0.1) 1px,
      transparent 1px);
  background-size: 2px 2px;
  background-repeat: repeat;
  pointer-events: none;
  z-index: 100;
}

.hero-gradient {
  background: linear-gradient(to top right,
      var(--color-primary-500) 0%,
      var(--color-primary-700) 15%,
      var(--foreground) 40%);
}

@keyframes marquee {
  from {
    transform: translateX(0);
  }

  to {
    transform: translateX(calc(-100% - var(--gap)));
  }
}

@keyframes marquee-vertical {
  from {
    transform: translateY(0);
  }

  to {
    transform: translateY(calc(-100% - var(--gap)));
  }
}

